--- a/tools/recipe-generator.html
+++ b/tools/recipe-generator.html
@@ -175,7 +175,7 @@ layout: tools
         <div class="d-grid gap-2 mt-3">
             <button class="btn btn-success" type="button" id="download-pack">Download</button>
             <button class="btn btn-danger" type="button" id="delete-all">Delete all</button>
-            <a href="{{ site.url }}assets/downloads/nbtcrafter_by_binary1024.zip" class="btn btn-primary" type="button" id="delete-all">Delete all</button>
+            <a href="{{ site.url }}assets/downloads/nbtcrafter_by_binary1024.zip" class="btn btn-primary" download>Download NBTCrafter</a>
         </div>
     </div>
 </div>
