--- a/tools/recipe-generator.html
+++ b/tools/recipe-generator.html
@@ -2,19 +2,25 @@
 title: Recipe Generator
 description: recipe generator for NBTCrafter
 visible: true
-layout: tools
+layout: empty
+changelog: 
+  -
+    date: 2021-05-19
+    changes:
+      - Added backup and restore
+      - UI Changes
 ---
 <a name="top"></a>
 <div class="row">
     <div class="col-md-9">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="crafting-tab" data-bs-toggle="tab" data-bs-target="#crafting" type="button"
-                    role="tab" aria-controls="crafting" aria-selected="true">Crafting</button>
+                <button class="nav-link active" id="crafting-tab" data-bs-toggle="tab" data-bs-target="#crafting"
+                    type="button" role="tab" aria-controls="crafting" aria-selected="true">Crafting</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="spells-tab" data-bs-toggle="tab" data-bs-target="#spells" type="button" role="tab"
-                    aria-controls="spells" aria-selected="false">Spells</button>
+                <button class="nav-link" id="spells-tab" data-bs-toggle="tab" data-bs-target="#spells" type="button"
+                    role="tab" aria-controls="spells" aria-selected="false">Spells</button>
             </li>
         </ul>
         <div class="tab-content" id="myTabContent">
@@ -32,31 +38,42 @@ layout: tools
                             <div class="col-md-3">
                                 <table class="table table-bordered">
                                     <tr>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="3b" data-nbt=""></td>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="4b" data-nbt=""></td>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="5b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="3b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="4b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="5b" data-nbt=""></td>
                                     </tr>
                                     <tr>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="12b" data-nbt=""></td>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="13b" data-nbt=""></td>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="14b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="12b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="13b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="14b" data-nbt=""></td>
                                     </tr>
                                     <tr>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="21b" data-nbt=""></td>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="22b" data-nbt=""></td>
-                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32" data-slot="23b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="21b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="22b" data-nbt=""></td>
+                                        <td><img data-recipe="recipe" data-id="minecraft:air" width="32" height="32"
+                                                data-slot="23b" data-nbt=""></td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="col-md-9">
                                 <div class="mb-3">
                                     <label for="item-id" class="form-label">ID</label>
-                                    <select class="form-control" data-live-search="true" id="item-id" data-slot="-1b" data-target="id">
+                                    <select class="form-control" data-live-search="true" id="item-id" data-slot="-1b"
+                                        data-target="id">
                                     </select>
                                 </div>
                                 <div class="mb-3">
                                     <label for="item-nbt" class="form-label">NBT</label>
-                                    <input type="text" class="form-control" id="item-nbt" data-slot="-1b" data-target="nbt">
+                                    <input type="text" class="form-control" id="item-nbt" data-slot="-1b"
+                                        data-target="nbt">
                                 </div>
                             </div>
                         </div>
@@ -82,7 +99,8 @@ layout: tools
                         </div>
                         <div class="mb-3">
                             <label for="result-count" class="form-label">Count</label>
-                            <input type="number" class="form-control" id="result-count" data-slot="16b" data-target="count" min="1" max="64" value="1">
+                            <input type="number" class="form-control" id="result-count" data-slot="16b"
+                                data-target="count" min="1" max="64" value="1">
                         </div>
                     </div>
                 </div>
@@ -134,7 +152,8 @@ layout: tools
                         </div>
                         <div class="mb-3">
                             <label for="trade-multiplier" class="form-label">Cost multiplier</label>
-                            <input type="number" class="form-control" id="trade-multiplier" min="0" max="1" step="0.01" value="0">
+                            <input type="number" class="form-control" id="trade-multiplier" min="0" max="1" step="0.01"
+                                value="0">
                         </div>
                         <div class="mb-3">
                             <label for="trade-xp" class="form-label">XP</label>
@@ -149,6 +168,15 @@ layout: tools
                 </div>
             </div>
         </div>
+        <h5 class="mt-4">Changelog</h5>
+        {% for entry in page.changelog %}
+        <b>{{ entry.date }}</b>
+        <ul>
+            {% for change in entry.changes %}
+            <li>{{ change }}</li>
+            {% endfor %}
+        </ul>
+        {% endfor %}
     </div>
     <div class="col-md-3">
         <div class="alert alert-success" role="alert">
@@ -172,13 +200,89 @@ layout: tools
             <ul class="list-group list-group-flush" id="spell-list">
             </ul>
         </div>
-        <div class="d-grid gap-2 mt-3">
-            <button class="btn btn-success" type="button" id="download-pack">Download</button>
-            <button class="btn btn-danger" type="button" id="delete-all">Delete all</button>
-            <a href="{{ site.url }}assets/downloads/nbtcrafter_by_binary1024_1.1.zip" class="btn btn-primary" download>Download NBTCrafter</a>
+        <div class="card mt-2">
+            <div class="card-header">
+                Download
+            </div>
+            <div class="card-body">
+                <div class="d-grid gap-2 mt-3">
+                    <button class="btn btn-success" type="button" id="download-pack">Download</button>
+                    <button class="btn btn-danger" type="button" id="delete-all">Delete all</button>
+                    <a href="{{ site.url }}assets/downloads/nbtcrafter_by_binary1024_1.1.zip" class="btn btn-primary"
+                        download>Download NBTCrafter</a>
+                </div>
+            </div>
+        </div>
+        <div class="card mt-2">
+            <div class="card-header">
+                Backup &amp; Restore
+            </div>
+            <div class="card-body">
+                <div class="d-grid gap-2 mt-3">
+                    <button class="btn btn-primary" type="button" id="backup-recipes">Backup</button>
+                    <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#restore-modal"
+                        id="restore-action">Restore</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+<div class="modal fade" tabindex="-1" id="restore-modal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Restore</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="file-selector" class="form-label">Select a file to restore recipes from</label>
+                    <input class="form-control" type="file" id="file-selector" accept="application/json">
+                </div>
+                <p class="mt-2"><b>Options</b></p>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="override-namespace">
+                    <label class="form-check-label" for="override-namespace">
+                        Override namespace
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="override-recipes">
+                    <label class="form-check-label" for="override-recipes">
+                        Override recipes with the same name
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="override-spells">
+                    <label class="form-check-label" for="override-spells">
+                        Override spells with the same name
+                    </label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="restore-recipes">Restore</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="restore-progress-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Restoring</h5>
+            </div>
+            <div class="modal-body">
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="restore-progress"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<hr>
+<small><a href="https://www.minecraft.net/">Minecraft</a> is copyright Mojang Studios and is <b>NOT</b> affiliated with this web site.</small>
+<br>
 <script src="../assets/FileSaver.min.js"></script>
 <script src="../assets/jszip.min.js"></script>
 <script src="../assets/recipe-generator.js"></script>
