--- a/tools/recipe-generator.html
+++ b/tools/recipe-generator.html
@@ -3,6 +3,7 @@ title: Recipe Generator
 description: recipe generator for NBTCrafter
 visible: true
 layout: empty
+category: tools
 changelog: 
   -
     date: 2021-05-19
